# advent22

./: Cargo.toml  README.md
src/: day01.rs  day02.rs  day02p1.rs  day02p2.rs  day03.rs  day03p1.rs  day03p2.rs  day04.rs  day04p1.rs  day04p2.rs  day05.rs  day05p1.rs  day05p2.rs  day06.rs  day06p1.rs  day06p2.rs  day07.rs  day08.rs  day09.rs  day10.rs
